# resolve

./: DNSSEC.md  README.md  TESTRUN.txt  TODO.md  pylintrc  pyproject.toml  resolve.py  root.hints  setup.py  test_resolve.py  validate1.py
reslib/: __init__.py  batch.py  cache.py  common.py  dnssec.py  exception.py  exit.py  hints.py  lookup.py  main.py  nameserver.py  options.py  prefs.py  query.py  reset.py  result.py  root.py  rootkey.py  rrset.py  stats.py  usage.py  utils.py  version.py  zone.py
tools/: mk-hints.sh  restest.py  validate1.py
