[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve"
dynamic = ["version"]
license = "MIT"

authors = [
    { name = "Shumon Huque", email = "shuque@gmail.com" },
]
description = "Command line iterative DNS resolver functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=3.0",
    "dnspython>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/shuque/resolve"
Issues = "https://github.com/shuque/resolve/issues"

[tool.setuptools]
packages = ["reslib"]
script-files = ['resolve.py']

[tool.setuptools.dynamic]
version = {attr = "reslib.version.__version__"}
